--- a/content/post/2022-08-07-c100-announce.md
+++ b/content/post/2022-08-07-c100-announce.md
@@ -8,7 +8,7 @@ slug: "c100-announce"
 draft: true
 ---
 
-C100（2022年夏コミ）に当選したいました。日時・スペースは **1日目（8/13土曜日）西地区 “せ” ブロック 08a** です。新刊“urandom vol.9”を出します。
+C100（2022年夏コミ）に当選しました。日時・スペースは **1日目（8/13土曜日）西地区 “せ” ブロック 08a** です。新刊“urandom vol.9”を出します。
 （前回のC99参加の際には前日まで印刷作業をしていて告知などをする余裕がありませんでした😇 今回はそれよりは余裕のある作成となりこうしてお知らせが出せています）
 
 次の画像をクリックすると本文サンプルが見えます。
