Change to `draft: false`

--- a/content/post/2022-08-07-c100-announce.md
+++ b/content/post/2022-08-07-c100-announce.md
@@ -5,7 +5,7 @@ author: "yyu"
 tags:
   - Publication
 slug: "c100-announce"
-draft: true
+draft: false
 ---
 
 C100（2022年夏コミ）に当選しました。日時・スペースは **1日目（8/13土曜日）西地区 “せ” ブロック 08a** です。新刊“urandom vol.9”を出します。
