drop onsite member

--- a/content/post/2022-12-24-comiket101.md
+++ b/content/post/2022-12-24-comiket101.md
@@ -21,4 +21,4 @@ urandom vol.10は次の内容でお送りします。
 
 本文ページ数は34p、頒布価格は500円の予定です。
 
-週間予報では今のところ当日の東京は晴れ時々曇りの予報となっています。寒さ対策を十分にして、気を付けてお越しください。当日はopとmaythが会場にいます。
+週間予報では今のところ当日の東京は晴れ時々曇りの予報となっています。寒さ対策を十分にして、気を付けてお越しください。
