Fix sample and add front cover image

--- a/content/post/2024-08-08-comiket104.md
+++ b/content/post/2024-08-08-comiket104.md
@@ -7,9 +7,9 @@ tags:
 slug: "comiket104"
 ---
 
-C104（2024年夏コミ）に参加します。参加日は**8/12（月）（2日目）**、スペースは**西す-14a**です。新刊"urandom Selections 1"が出ます。サンプルは次のリンクからどうぞ。
+C104（2024年夏コミ）に参加します。参加日は**8/12（月）（2日目）**、スペースは**西す-14a**です。新刊"urandom Selections 1"が出ます。サンプルは次の表紙画像リンクからどうぞ。
 
-- [本文サンプル](/pdfs/c104_sample.pdf)
+[![c104 sample](/images/c104_cover_thumb.png)](/pdfs/c104_sample.pdf)
 
 urandom Selections 1は次の内容でお送りします。
 
