--- a/content/post/2025-08-15-comiket106.md
+++ b/content/post/2025-08-15-comiket106.md
@@ -9,7 +9,7 @@ slug: "comiket106"
 
 C106（2025年夏コミ）に参加します。参加日は**08/17（日）（2日目）**、スペースは**東7ホール T-13b**です。新刊“urandom vol.13.5”が出ます。
 
-<!-- [![c105 sample](/images/c105_cover_thumb.png)](/pdfs/c105_sample.pdf) -->
+![urandom vol.13.5 Cover](/images/c106_cover_thumb.png)
 
 urandom vol.13.5は次の内容でお送りします。
 
